# internal/models/hotels.go
@@ -2,8 +2,8 @@ package models
 
 type HotelsModel struct {
 	ID       uint   `gorm:"primaryKey"`
-	title    string `gorm:"size:100"`
-	location string `gorm:"size:400"`
+	Title    string `gorm:"size:100"`
+	Location string `gorm:"size:400"`
 }
 
 func (HotelsModel) TableName() string {
